# omni-runner

./: Cargo.toml  README.md  config.example.toml
coverage/: tarpaulin-report.html
coverage_html/: tarpaulin-report.html
src/: config.rs  heartbeat.rs  lib.rs  main.rs  models.rs  system.rs  tasks.rs
src/api/: client.rs
src/executor/: api.rs  binary.rs  mod.rs  python.rs  shell.rs
src/pipeline/: dag.rs  engine.rs  failure_policy.rs  mod.rs  parallel.rs  resource_lock.rs
src/security/: mod.rs  policy.rs
src/utils/: logging.rs
tests/: api_client.rs  api_client_edge_cases.rs  api_coverage.rs  api_executor.rs  binary_executor.rs  config.rs  executor.rs  executor_coverage.rs  executors_simple.rs  heartbeat.rs  logging.rs  models.rs  pipeline.rs  python_executor.rs  security.rs  system.rs  system_monitoring_real.rs  tasks.rs
