[package]
name = "omni-runner"
version = "0.1.0"
edition = "2021"
authors = ["Omni-Test-Labs Team"]
license = "MIT"
repository = "https://github.com/Omni-Test-Labs/omni-runner"
description = "High-performance edge test execution engine for Omni-Test-Labs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1"
thiserror = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Command parsing
shlex = "1"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockito = "1"
serde_test = "1"
httpmock = "0.6"
